# OperatingSystems

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  ci.yml
source/monolith/: Main.cpp
source/monolith/benchmarks/: dedup_benchmark.cpp  multi_benchmark.cpp  search_name_benchmark.cpp
source/monolith/commands/: CdCommand.cpp  CdCommand.h  Command.h  ExitCommand.cpp  ExitCommand.h  HelpCommand.cpp  HelpCommand.h  utility.cpp  utility.h
test/: CMakeLists.txt  test_main.cpp  test_search_name_benchmark.cpp
tests/: benchmark_tests.cpp
